Improved button functionality to reset grid

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1>Welcome to Etch-A-Sketch</h1>
+    <h1>Geoffrey's Etch-A-Sketch</h1>
+    <div id= btn>
+      <button type="button" class="button">Reset Grid</button>
+    </div>
     <div class = "grid-container" id="gridBody">
     </div>
     <script src="script.js"></script>
